--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	font-family: 'Montserrat', sans-serif;
-	/*font-family: verdana, arial, helvetica;*/
+	font-family: verdana, arial, helvetica;
 	min-width: 360px;
 	max-width: 1280px;
 	margin: auto;
@@ -52,12 +51,14 @@ form {
 	align-items: center;
 	margin: 16px;
 	width: 100%;
+	font-size: 16px;
 }
 
 textarea {
 	width: 100%;
 	height: 128px;
 	margin: 8px 0;
+	font-size: 16px;
 }
 
 .output {
