--- a/style.css
+++ b/style.css
@@ -1,20 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+:root {
+	--page-font-size: 20px;
+
+	--nord0: #2e3440;
+	--nord1: #3b4252;
+	--nord2: #434c5e;
+	--nord3: #4c566a;
+
+	--nord4: #d8dee9;
+	--nord5: #e5e9f0;
+	--nord6: #eceff4;
+
+	--nord7: #8fbcbb;
+	--nord8: #88c0d0;
+	--nord9: #81a1c1;
+	--nord10: #5e81ac;
+}
+
 body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	font-family: verdana, arial, helvetica;
 	min-width: 360px;
 	max-width: 1280px;
 	margin: auto;
 	padding: 16px;
 	min-height: 100vh;
-	font-size: 16px;
 	align-items: center;
+	background: white;
+	font-size: var(--page-font-size);
+	font-family: 'Montserrat', sans-serif;
 }
 
 form {
 	display: flex;
 	flex-direction: column;
+}
+
+p {
+	text-align: justify;
 }
 
 ul {
@@ -26,24 +51,44 @@ ul {
 }
 
 li {
-	margin: 12px;
+	margin: 8px;
 }
 
 a {
 	display: flex;
-	text-decoration: none;
-	text-transform: uppercase;
 	padding: 8px;
-	font-size: 24px;
-	min-width: 256px;
-	min-height: 48px;
-	border: 0;
-	background: linear-gradient(to left, #00E7F7, #00C2F1);
-	border-radius: 128px;
-	justify-content: center;
-	align-items: center;
-	color: black;
-	font-family: verdana, arial, helvetica;
+	text-decoration: none;
+	background-color: transparent;
+	border: solid var(--nord0) 1px;
+	border-radius: 8px;
+	text-align: center;
+	color: var(--nord0);
+	transition: .5s ease-in;
+}
+
+a:hover {
+	color: var(--nord9);
+	border-color: var(--nord9);
+}
+
+input {
+	font-size: var(--page-font-size);
+	font-family: 'Montserrat', sans-serif;
+	cursor: pointer;
+	display: flex;
+	padding: 8px;
+	text-decoration: none;
+	background-color: transparent;
+	border: solid var(--nord0) 1px;
+	border-radius: 8px;
+	text-align: center;
+	color: var(--nord0);
+	transition: .5s ease-in;
+}
+
+input:hover {
+	color: var(--nord9);
+	border-color: var(--nord9);
 }
 
 form {
@@ -52,22 +97,29 @@ form {
 	align-items: center;
 	margin: 16px;
 	width: 100%;
-	font-family: verdana, arial, helvetica;
 }
 
 textarea {
+	font-size: var(--page-font-size);
+	font-family: 'Montserrat', sans-serif;
 	width: 100%;
 	height: 128px;
 	margin: 8px 0;
-	font-family: verdana, arial, helvetica;
+	outline-color: var(--nord9);
 }
 
 input {
+	font-size: var(--page-font-size);
+	font-family: 'Montserrat', sans-serif;
 	margin: 8px 0;
-	font-family: verdana, arial, helvetica;
+	outline: none;
 }
 
 .output {
 	font-weight: bold;
-	font-size: 24px;
+}
+
+mark {
+	color: var(--nord6);
+	background-color: var(--nord0)
 }
