--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+.preload * {
+ -webkit-transition: none !important;
+ -moz-transition: none !important;
+ -ms-transition: none !important;
+ -o-transition: none !important;
+}
+
 :root {
 	--page-font-size: 20px;
 
@@ -25,20 +32,17 @@ body {
 	min-width: 360px;
 	max-width: 1280px;
 	margin: auto;
-	padding: 16px;
-	min-height: 100vh;
+	padding: 0 16px;
+	height: 100vh;
 	align-items: center;
 	background: white;
 	font-size: var(--page-font-size);
 	font-family: 'Montserrat', sans-serif;
 }
 
-form {
-	display: flex;
-	flex-direction: column;
-}
-
-p {
+p, label {
+	width: 100%;
+	margin: 8px;
 	text-align: justify;
 }
 
@@ -50,10 +54,6 @@ ul {
 	padding: 0;
 }
 
-li {
-	margin: 8px;
-}
-
 a {
 	display: flex;
 	padding: 8px;
@@ -63,7 +63,8 @@ a {
 	border-radius: 8px;
 	text-align: center;
 	color: var(--nord0);
-	transition: .5s ease-in;
+	margin: 8px;
+	transition: border-color .5s ease 0s, color .5s ease 0s;
 }
 
 a:hover {
@@ -95,17 +96,21 @@ form {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin: 16px;
+	margin: 8px;
+	min-width: 320px;
 	width: 100%;
 }
 
 textarea {
 	font-size: var(--page-font-size);
 	font-family: 'Montserrat', sans-serif;
-	width: 100%;
 	height: 128px;
-	margin: 8px 0;
+	margin: 8px;
+	width: 100%;
+	border: solid var(--nord0) 1px;
 	outline-color: var(--nord9);
+	resize: none;
+	box-sizing: border-box;
 }
 
 input {
