--- a/style.css
+++ b/style.css
@@ -31,19 +31,24 @@ body {
 	justify-content: center;
 	min-width: 360px;
 	max-width: 1280px;
-	margin: auto;
-	padding: 0 16px;
-	height: 100vh;
+	margin: 0px;
+	padding: 16px;
+	min-height: 100vh;
 	align-items: center;
 	background: white;
 	font-size: var(--page-font-size);
 	font-family: 'Montserrat', sans-serif;
+	box-sizing: border-box;
 }
 
 p, label {
 	width: 100%;
 	margin: 8px;
 	text-align: justify;
+}
+
+label {
+	text-align: center;
 }
 
 ul {
@@ -61,7 +66,7 @@ a {
 	background-color: transparent;
 	border: solid var(--nord0) 1px;
 	border-radius: 8px;
-	text-align: center;
+	justify-content: center;
 	color: var(--nord0);
 	margin: 8px;
 	transition: border-color .5s ease 0s, color .5s ease 0s;
