--- a/style.css
+++ b/style.css
@@ -31,14 +31,13 @@ body {
 	justify-content: center;
 	min-width: 360px;
 	max-width: 1280px;
-	margin: 0px;
+	margin: auto;
 	padding: 16px;
 	min-height: 100vh;
 	align-items: center;
 	background: white;
 	font-size: var(--page-font-size);
 	font-family: 'Montserrat', sans-serif;
-	box-sizing: border-box;
 }
 
 p, label {
