--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@
 	--nord8: #88c0d0;
 	--nord9: #81a1c1;
 	--nord10: #5e81ac;
+
+	--nord11: #BF616A;
+	--nord12: #D08770;
+	--nord13: #EBCB8B;
+	--nord14: #A3BE8C;
+	--nord15: #B48EAD;
 }
 
 body {
@@ -75,7 +81,6 @@ button {
 	background-color: transparent;
 	border: solid var(--nord0) 1px;
 	border-radius: 8px;
-	text-align: center;
 	color: var(--nord0);
 	transition: border-color .5s ease 0s, color .5s ease 0s;
 	outline: none;
@@ -83,7 +88,7 @@ button {
 
 input {
 	cursor: auto;
-	max-width: 128px;
+	max-width: 320px;
 }
 
 a:hover,
@@ -96,8 +101,7 @@ button:hover {
 form {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	margin: 8px;
+	align-items: flex-start;
 	min-width: 320px;
 	width: 100%;
 }
@@ -107,11 +111,19 @@ textarea {
 	font-family: 'Montserrat', sans-serif;
 	height: 128px;
 	margin: 8px;
+	padding: 8px;
 	width: 100%;
 	border: solid var(--nord0) 1px;
-	outline-color: var(--nord9);
+	border-radius: 8px;
+	outline: none;
 	resize: none;
 	box-sizing: border-box;
+	transition: border-color .5s ease 0s, color .5s ease 0s;
+}
+
+textarea:hover {
+	color: var(--nord9);
+	border-color: var(--nord9);
 }
 
 .output {
@@ -125,10 +137,6 @@ textarea {
 	align-items: center;
 	flex-direction: row;
 	justify-content: center;
-}
-
-.db-control > label {
-
 }
 
 .db-field {
@@ -162,4 +170,18 @@ th {
 tr:hover {
 	transition: background-color .25s ease 0s;
 	background-color: var(--nord6);
+}
+
+.email-input {
+	box-sizing: border-box;
+	max-width: none;
+	width: 100%
+}
+
+.success {
+	color: var(--nord14);
+}
+
+.error {
+	color: var(--nord11);
 }
