--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 	background: white;
 	font-size: var(--page-font-size);
 	font-family: 'Montserrat', sans-serif;
+	color: var(--nord0);
 }
 
 p {
@@ -84,7 +85,7 @@ button {
 	border: solid var(--nord0) 1px;
 	border-radius: 8px;
 	color: var(--nord0);
-	transition: border-color .5s ease 0s, color .5s ease 0s;
+	transition: .5s ease 0s;
 	outline: none;
 }
 
@@ -93,10 +94,20 @@ input {
 	max-width: 320px;
 }
 
+.form-button:hover {
+	cursor: pointer;
+	max-width: 320px;
+}
+
 a:hover,
-input:hover,
-button:hover {
+button:hover,
+.form-button:hover {
 	color: var(--nord9);
+	border-color: var(--nord9);
+	box-shadow: 0 0 16px var(--nord4);
+}
+
+input:hover {
 	border-color: var(--nord9);
 }
 
@@ -120,11 +131,10 @@ textarea {
 	outline: none;
 	resize: none;
 	box-sizing: border-box;
-	transition: border-color .5s ease 0s, color .5s ease 0s;
+	transition: .5s ease 0s;
 }
 
 textarea:hover {
-	color: var(--nord9);
 	border-color: var(--nord9);
 }
 
@@ -186,4 +196,61 @@ tr:hover {
 
 .error {
 	color: var(--nord11);
+}
+
+.graph-container {
+	display: flex;
+	flex-direction: column;
+	background-color: var(--nord6);
+	border: 1px solid transparent;
+	border-radius: 8px;
+	padding: 8px;
+	width: 100%;
+	height: 320px;
+}
+.graph {
+	display: flex;
+	align-items: flex-end;
+	height: 100%;
+}
+
+.graph > .item-container {
+	display: flex;
+	flex-direction: column;
+	margin: 4px;
+	box-sizing: border-box;
+	height: 100%;
+	width: 100%;
+	justify-content: flex-end;
+	align-items: center;
+	color: var(--nord0);
+	text-shadow: 1px 1px 1px grey;
+}
+
+.graph > .item-container > .item{
+	color: white;
+	text-shadow: 1px 1px 1px grey;
+	border-radius: 8px;
+	background-color: var(--nord9);
+	box-shadow: 0 0 1px grey;
+	width: 100%;
+	height: 100%;
+	transition: .5s ease 0s;
+	box-sizing: border-box;
+	padding: 8px;
+}
+.graph > .item-container > .item:hover{
+	background-color: var(--nord10);
+	box-shadow: 0 0 2px #2280AC;
+}
+
+.stat-control {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items: center;
+}
+
+.stat-control > label {
+	width: auto;
 }
